# leitor-desktop-app

./: .cursorignore  .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  index.html  package-lock.json  package.json  splashscreen.html  vite.config.ts
.cursor/rules/: release-behavior.md  release-format.md  release-identity.md
.cursor/skills/: release.md
.github/workflows/: ci.yml
e2e-tests/: README.md  package-lock.json  package.json  wdio.conf.cjs
e2e-tests/scripts/: seed-db.cjs
e2e-tests/specs/: library.e2e.cjs  navigation.e2e.cjs  reader.e2e.cjs  (+1 more)
src/: App.css  App.tsx  i18n.ts  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/: archive.toml  db.toml  splash.toml
src-tauri/resources/7z/: README.md
src-tauri/src/: archive.rs  error.rs  lib.rs
src-tauri/src/commands/: book_commands.rs  custom_theme_commands.rs  metadata_commands.rs  mod.rs  pending_open.rs  progress_commands.rs  settings_commands.rs  shelf_commands.rs
src-tauri/src/db/: connection.rs  mod.rs  schema.rs
src-tauri/src/metadata/: cache.rs  candidate.rs  cover.rs  decision.rs  mod.rs  normalizer.rs  scorer.rs  search.rs  variations.rs
src-tauri/src/metadata/sources/: anilist.rs  jikan.rs  kitsu.rs  loc.rs  mod.rs  open_library.rs  source_trait.rs
src-tauri/src/models/: book.rs  mod.rs  progress.rs  settings.rs  shelf.rs
src-tauri/src/repositories/: book_repository.rs  custom_theme_repository.rs  metadata_repository.rs  mod.rs  progress_repository.rs  settings_repository.rs  shelf_repository.rs
(+50 files in other folders)
