[package]
name = "app"
version = "0.2.0"
description = "Readito - Desktop reader for EPUB, PDF, and image folders"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
zip = "2.2"
natord = "1.0"
# rusqlite: sync, sem runtime async, ideal para commands Tauri; bundled = SQLite embutido
rusqlite = { version = "0.32", features = ["bundled"] }
# HTTP para fontes de metadados (Open Library, LoC, AniList, Kitsu, Jikan)
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
regex = "1.10"
urlencoding = "2.1"
tauri-plugin-opener = "2"
uuid = { version = "1", features = ["v4"] }
